# AlphaFold

./: .env.example  .gitignore  LICENSE  LIVE_AVATAR_README.md  README.md  TEMPLATE_FEATURE_README.md  fix_backend.py  fix_frontend.py  package-lock.json  package.json  pyproject.toml  report.md  requirements.txt  test_resume.py  test_ws.py
backend/: .env.example  Dockerfile  Procfile  config.py  dump_db.py  main.py  requirements.txt  test.py  test2.py  test3.py  test_api.py  test_db.py  test_gemini_setup.py  test_models.py  test_pipeline.py  test_tts.py  test_ws.py
backend/data/transcripts/: transcript_01_manufacturer.txt  transcript_03_Full_Discovery.txt
backend/db/: mongo_client.py  redis_client.py  user_client.py
backend/graph/: models.py  pipeline.py  state.py
backend/graph/nodes/: __init__.py  calculate_roi.py  generate_summary.py  map_patterns.py  parse_input.py  preprocess_media.py  score_steps.py  structure_process.py
backend/routes/: __init__.py  keys.py
backend/templates/6a381897b6f81dec0ad8857b/: pdd.docx
backend/tests/: test_currency_fix.py  test_pricing.py
backend/utils/: api_keys.py  auth.py  docx_parser.py  email_sender.py  gemini_client.py  media_processor.py  pricing.py  roi_math.py  template_renderer.py  template_store.py
demo/: demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: pcm-processor.js
frontend/src/: App.jsx  index.css  main.jsx  prism.js
frontend/src/components/: Login.jsx  (+29 more)
tests/: conftest.py  test_media_processor.py  test_pipeline.py  test_roi_math.py
(+3 files in other folders)
