[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auxilab-agent-ap-discovery"
version = "1.0.0"
description = "AP Process Discovery Agent — turns an Accounts Payable process description (text, document, audio, or video) into a structured automation assessment, ROI projection, BPMN diagram, and PDD/SDD documents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "AuxiLab Hackathon Team" },
]
keywords = ["accounts-payable", "rpa", "automation", "langgraph", "gemini", "bpmn", "pdd", "sdd"]

# Runtime dependencies are pinned in backend/requirements.txt.
# Install with:  pip install -r requirements.txt
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/AuxiLabs-Auxiliobits/auxilab-ap-discovery"
Repository = "https://github.com/AuxiLabs-Auxiliobits/auxilab-ap-discovery"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
